[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://vt323_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://vt323-message_64.tres" type="DynamicFont" id=3]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="title" type="RichTextLabel" parent="."]
margin_left = 326.0
margin_top = 33.0
margin_right = 710.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.109804, 0.768627, 0.164706, 1 )
text = "Number Guesser"

[node name="message" type="RichTextLabel" parent="."]
margin_left = 29.0
margin_top = 165.0
margin_right = 1000.0
margin_bottom = 450.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.109804, 0.768627, 0.164706, 1 )
text = "dummy text"

[node name="greater" type="Button" parent="."]
margin_left = 743.12
margin_top = 470.214
margin_right = 963.12
margin_bottom = 548.214
custom_fonts/font = ExtResource( 2 )
text = "Greater"

[node name="lesser" type="Button" parent="."]
margin_left = 60.8044
margin_top = 466.715
margin_right = 280.804
margin_bottom = 544.715
custom_fonts/font = ExtResource( 2 )
text = "Lesser"

[node name="right" type="Button" parent="."]
margin_left = 382.717
margin_top = 463.216
margin_right = 602.717
margin_bottom = 541.216
custom_fonts/font = ExtResource( 2 )
text = "Correct"
[connection signal="pressed" from="greater" to="." method="_on_greater_pressed"]
[connection signal="pressed" from="lesser" to="." method="_on_lesser_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
